# yggy

./: .gitignore  global_model.json  package-lock.json  package.json  pydoc-markdown.yaml  pydoc-markdown.yml  pyproject.toml  requirements.txt  tsconfig.json  typedoc.json  watch.py
app/: __main__.py  __main__.ts  app.py  app.tsx  fx.tsx  hot_reload.py  index.css  index.html  index.ts  mako.py  qrcode.py  slider.g.tsx  slider.py  slider.tsx  yg.py  yggy.py
components/: components.ts  slider.py  slider.ts
docs/: api.md
docs/py/: README.md
docs/ts/: README.md  modules.md
esm/: __init__.js
esm/basic/: jsx.d.ts  jsx.js
esm/comm/: __init__.d.ts  comm.d.ts  comm.js  comm_ws.d.ts  comm_ws.js  messages.d.ts  messages.js
esm/jsx/: __init__.d.ts  __init__.js  binding.d.ts  binding.js  dom_mutations.d.ts  dom_mutations.js  helpers.d.ts  helpers.js  jsx.d.ts  jsx.js  node_tree.d.ts  node_tree.js  tree_events.d.ts  tree_events.js
esm/model/: model.d.ts  model.js  schema.d.ts
esm/observable/: __init__.js  messages.d.ts  messages.js  observable.d.ts  observable.js  observable_base.d.ts  observable_base.js  observable_list.d.ts  observable_list.js  schema.d.ts  (+2 more)
pyggy/: __init__.py  comm.py  component.py  json.py  py2ts.py  rpc.py
src/: __init__.py  hello.py  tsconfig.json  yggy.drawio
tools/: docs.py
web/: comm.ts  component.ts  importmap.json  index.css  index.html  index.html.mako  index.ts  observable.ts
yggy/: __init__.py  __init__.ts  callable.ts  index.ts  json.py  logging.py  logging.yaml  py2ts.py  tsconfig.json  utils.py  utils.ts  yggy.drawio
(+127 files in other folders)
