[project]
name = "yggy"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aaron Levine", email = "ald.levine@gmail.com" }]
dependencies = ["watchdog", "websockets", "PyYAML"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py311']
safe = true
verbose = true

[tool.setuptools.package-dir]
"yggy" = "src"

[tool.setuptools.package-data]
yggy = ["**/*.yaml", "**/py.typed"]
